[package]
name = "inc-complete"
version = "0.3.4"
edition = "2024"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["incremental", "compilation", "compiler", "spreadsheet"]
description = "A library for writing incremental computations that re-execute the minimum number of steps when an input is changed"
repository = "https://github.com/jfecher/inc-complete"
documentation = "https://docs.rs/inc-complete"

[dependencies]
petgraph = "0.8"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
paste = "1.0.15"

[features]
serde = ["dep:serde", "petgraph/serde-1"]
