[package]
name = "inc-complete"
version = "0.4.2"
edition = "2024"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["incremental", "compilation", "compiler", "spreadsheet"]
description = "A library for writing incremental computations that re-execute the minimum number of steps when an input is changed"
repository = "https://github.com/jfecher/inc-complete"
documentation = "https://docs.rs/inc-complete"

[features]
async = []

[dependencies]
dashmap = { version = "6.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-scoped = "0.2.0"
